<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item1"
        android:icon="@drawable/ic_baseline_more_24"
        android:title="@string/Itemi"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/item2"
        android:title="@string/Itemii"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/item3"
        android:title="@string/Itemiii"
        app:showAsAction="never">
        <menu>
            <item android:id="@+id/subitem1"
                android:title="@string/subitemi"/>
            <item android:id="@+id/subitem2"
                android:title="@string/subitemii"/>

        </menu>
    </item>
</menu>